--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.15.3",
-    "mysql": "^2.18.1",
-    "password-generator": "^2.1.0"
+    "mysql": "^2.18.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
